Contrast ratio fix + defer javascript

--- a/assets/style.css
+++ b/assets/style.css
@@ -112,7 +112,7 @@ body {
 .nav-pills .nav-link.active,
 .nav-pills .show>.nav-link {
 	color: #fff;
-	background-color: #BEB45A;
+	background-color: #5A5725;
 	border-radius: 0;
 }
 
